--- a/Demo/apps/superapp-unified/index.html
+++ b/Demo/apps/superapp-unified/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     
     <!-- PWA Meta Tags -->
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#6366f1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
