--- a/Demo/apps/superapp-unified/index.html
+++ b/Demo/apps/superapp-unified/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     
+    <!-- ✅ Fuentes locales con fallbacks para prevenir errores 404 -->
+    <link rel="stylesheet" href="/fonts/fonts.css" />
+    
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#6366f1" />
